--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "remix": "^2.15.3",
     "socket.io-client": "^4.7.4",
-    "zustand": "^4.5.2",
-    "@supabase/supabase-js": "^2.39.7",
-    "date-fns": "^3.3.1",
-    "clsx": "^2.1.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
